# bak-translation-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ISSUES.md  Justfile  Makefile  README.md  pyproject.toml  shell.nix
data/: README.md
lib/filebuffer/: setup.py
lib/filebuffer/src/: FileBuffer.cpp  FileBuffer.h  SDL_config_windows.h  begin_code.h  close_code.h
lib/filebuffer/src/tests/: test_compress.py
src/baktt/: book.py  cli.py  encoding.py  fonts.py  images.py  patch.py  resources.py
src/baktt/gui/: font_editor.py
tools/: .gitignore  book.py  compression.py  encoding.py  filebuffer.py  fonts.py  pyproject.toml  resources.py
tools/gui/: font_editor.py
tools/lib/filebuffer/: pyproject.toml  setup.py
tools/lib/filebuffer/src/: SDL_config.h  SDL_config_minimal.h  SDL_endian.h  SDL_platform.h  SDL_stdinc.h  alt_stdint.h  begin_code.h  close_code.h  pybind.cpp
tools/lib/filebuffer/src/filebuffer/: __init__.py
tools/lib/filebuffer/src/tests/: test_compress.py
tools/src/baktt/: book.py  cli.py  csvtools.py  encoding.py  fonts.py  images.py  patch.py  resources.py
tools/src/baktt/gui/: font_editor.py
