[tool.poetry]
name = "bak-translation-tools"
version = "0.1.0"
description = ""
authors = ["Andrey Fedoseev <andrey@andreyfedoseev.com>"]
readme = "../README.md"
packages = [
    { include = "baktt", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
bitstring = "^3.1.9"
Pillow = "^9.2.0"
filebuffer = { path = "./lib/filebuffer" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
