[project]
name = "bak-translation-tools"
version = "0.1.0"
description = ""
authors = [{ name = "Andrey Fedoseev", email = "andrey@andreyfedoseev.com" }]
requires-python = ">=3.14"
dependencies = [
    "bitstring>=3.1.9",
    "cyclopts>=2.0.0",
    "Pillow>=9.2.0",
    "filebuffer",
]

[project.scripts]
baktt = "baktt.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
filebuffer = { path = "lib/filebuffer" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
